force-app/main/default/objects/Student_Registration__c/Student_Registration__c.object-meta.xml
<CustomObject>
    <description>Registration for Courses</description>
    <label>Student Registration</label>
    <nameField>
        <displayFormat>Student Id-{00000}</displayFormat>
        <label>Student Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>