force-app/main/default/objects/Student_Registration__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <label>Course Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>