force-app/main/default/objects/Student_Registration__c/fields/Courses__c.field-meta.xml
<CustomField>
    <fullName>Courses__c</fullName>
    <label>Courses</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Course_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java Advanced</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Salesforce Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>