force-app/main/default/objects/Student_Registration__c/validationRules/Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX ( UPPER (  Email_Id__c  ) ,&quot;^[A-Z0-9._%+-/!#$%&amp;&apos;*=?^_`{|}~]+@[A-Z0-9.-]+\\.[A-Z]{2,4}$&quot;))</errorConditionFormula>
    <errorDisplayField>Email_Id__c</errorDisplayField>
    <errorMessage>Please enter correct email id</errorMessage>
</ValidationRule>