force-app/main/default/objects/Student_Registration__c/validationRules/Email_Validation1.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Validation1</fullName>
    <active>true</active>
    <errorConditionFormula>OR(CONTAINS( Email_Id__c , &apos;@gmail.com&apos;) , CONTAINS( Email_Id__c , &apos;@Yahoo.com&apos;) , CONTAINS( Email_Id__c , &apos;@Outlook.com&apos;), CONTAINS( Email_Id__c , &apos;@Aol.com&apos;))</errorConditionFormula>
    <errorDisplayField>Email_Id__c</errorDisplayField>
    <errorMessage>Please enter the valid email id</errorMessage>
</ValidationRule>