force-app/main/default/objects/Student_Registration__c/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Phone_No__c , &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>Phone_No__c</errorDisplayField>
    <errorMessage>Please enter correct number &quot;Incorrect Phone No&quot;</errorMessage>
</ValidationRule>